<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/search_adviser"
        android:title="@string/text_search_advisor"
        android:icon="@drawable/ic_baseline_search_24"/>

    <item
        android:id="@+id/schedule_advisory"
        android:title="@string/text_schedule_advisory"
        android:icon="@drawable/ic_baseline_people_alt_24"
        />
    <item
        android:id="@+id/misAsesorias"
        android:title="Mis Asesorías"
        android:icon="@drawable/ic_baseline_list_alt_24"

        />
    <item
        android:id="@+id/profile"
        android:title="@string/text_profile"
        android:icon="@drawable/ic_baseline_person_24"
        />
    <item
        android:id="@+id/logout"
        android:title="@string/text_logout"
        android:icon="@drawable/ic_logout"/>

</menu>