<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdvisoryDescriptionFragment.AdvisoryDescriptionFragment">
    <ScrollView
        android:visibility="visible"
        android:id="@+id/mScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ivAdvisorImage"
                android:layout_width="@dimen/size_image_advisor"
                android:layout_height="@dimen/size_image_advisor"
                android:layout_margin="20dp"
                tools:src="@drawable/image_try"
                android:layout_gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profesor"
                    />
                <TextView
                    android:id="@+id/tvTeacherName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="HERNAN ALEJANDRO QUINTANA CRUZ"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/topic"
                    />
                <TextView
                    android:id="@+id/tvTopic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Firebase como desarrollo modernos de aplicaciones para todas las plataformas"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:id="@+id/tvDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="30 de febrero del 2023"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/hora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:id="@+id/tvHour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="15:23"
                    />
            </LinearLayout>

            <EditText
                android:id="@+id/etComments"
                android:hint="@string/advisory_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:lines="7"
                android:scrollbars="vertical" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_margin="@dimen/padding_item_career"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/update_field"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:background="@color/orange_official"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btnCreate"
                    android:layout_margin="@dimen/padding_item_career"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_recordatorio"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:background="@color/orange_official"
                    android:layout_weight="1"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/cardProgress"
        tools:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        >
        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_centerInParent="true"
            android:layout_width="@dimen/size_progress_bar"
            android:layout_height="@dimen/size_progress_bar" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading_message"
            android:layout_below="@+id/progress_circular"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/size_text_loading"/>
    </RelativeLayout>

</FrameLayout>