<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
        <LinearLayout
            android:id="@+id/content_teacher"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_card_advisor"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:background="@android:color/white">
                <ImageView
                    android:id="@+id/ivAdvisorImage"
                    android:layout_width="@dimen/size_image_advisor"
                    android:layout_height="@dimen/size_image_advisor"
                    android:layout_margin="20dp"
                    tools:src="@drawable/image_try"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/tvAdvisorName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:gravity="center"
                    tools:text="HERNAN ALEJANDRO QUINTANA CRUZ"/>
                <TextView
                    android:id="@+id/tvAdvisorEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:gravity="center"
                    tools:text="HQUINTAN@aloe.ulima.edu.pe"/>
                <TextView
                    android:id="@+id/tvAdvisorTopic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:gravity="center"
                    tools:text="Ingeniería de sistemas"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_advisory_description"
                    android:padding="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:text="@string/text_choose_topic"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        autofit:layout_constraintStart_toStartOf="parent"
                        autofit:layout_constraintTop_toBottomOf="@+id/textView2" />
                    <EditText
                        android:id="@+id/etTopic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:hint="Tema a tratar"
                        tools:text="Firebase como desarrollo modernos de aplicaciones para todas las plataformas"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_advisory_description"
                    android:padding="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textView"
                        android:layout_margin="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_choose_day"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        autofit:layout_constraintStart_toStartOf="parent"
                        autofit:layout_constraintTop_toTopOf="parent" />
                    <EditText
                        android:id="@+id/etDay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:inputType="date"
                        tools:hint="Hora a tratar" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_advisory_description"
                    android:padding="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:text="@string/choose_hour"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        />
                    <EditText
                        android:id="@+id/etHour"
                        android:layout_width="@dimen/width_etHour"
                        android:layout_height="@dimen/et_height"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:inputType="date"
                        tools:hint="Hora" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/sendEmailAdvisor"
                    android:layout_gravity="bottom"
                    android:layout_margin="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/colorAccent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_send_email_to"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/size_text_send_email"
                        android:textStyle="bold"
                        android:gravity="center"/>
                    <TextView
                        android:id="@+id/contactEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="hqintan@aloe.ulima.edu.pe"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/size_text_send_email"
                        android:textStyle="bold"
                        android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/cardProgress"
            tools:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true">
            <ProgressBar
                android:id="@+id/progress_circular"
                android:layout_centerInParent="true"
                android:layout_width="@dimen/size_progress_bar"
                android:layout_height="@dimen/size_progress_bar" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading_message"
                android:layout_below="@+id/progress_circular"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/size_text_loading"/>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
